--- a/Greeter/build.gradle
+++ b/Greeter/build.gradle
@@ -6,10 +6,29 @@ buildscript {
         classpath 'com.android.tools.build:gradle:0.4'
     }
 }
+
+repositories {
+    mavenCentral()
+}
+
 apply plugin: 'android'
 
+sourceSets {
+    testLocal {
+        java.srcDir file('src/test/java')
+        resources.srcDir file('src/test/resources')
+    }
+}
+
 dependencies {
+    compile 'org.roboguice:roboguice:2.0'
     compile files('libs/android-support-v4.jar')
+
+    testLocalCompile 'junit:junit:4.8.2'
+    testLocalCompile 'org.robolectric:robolectric:2.1'
+    testLocalCompile 'com.google.android:android:4.0.1.2'
+    testLocalCompile 'com.google.android:support-v4:r6'
+    testLocalCompile 'org.roboguice:roboguice:2.0'
 }
 
 android {
@@ -21,3 +40,20 @@ android {
         targetSdkVersion 16
     }
 }
+
+task localTest(type: Test, dependsOn: assemble) {
+    testClassesDir = sourceSets.testLocal.output.classesDir
+
+    android.sourceSets.main.java.srcDirs.each { dir ->
+        def buildDir = dir.getAbsolutePath().split('/')
+        buildDir =  (buildDir[0..(buildDir.length - 4)] + ['build', 'classes', 'debug']).join('/')
+
+        sourceSets.testLocal.compileClasspath += files(buildDir)
+        sourceSets.testLocal.runtimeClasspath += files(buildDir)
+    }
+
+    classpath = sourceSets.testLocal.runtimeClasspath
+}
+
+check.dependsOn localTest
+
